applications/software/home1/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        args:
        - server
        - /data
        - --console-address
        - ":9001"
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: data
          mountPath: /data
      - name: minio-console
        image: ghcr.io/astrateam-net/minio-browser:1.7.6
        command:
        - ./console
        - server
        - --port
        - "9002"
        ports:
        - containerPort: 9002
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-storage
