applications/software/home1/minio/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
  - "minio.yewolf.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio
      port: 9002
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-artifacts
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
  - "artifacts.yewolf.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio
      port: 9000
